@@ -4,6 +4,7 @@
 
 - fixed `opt.options` argument in the `AUTH()` method
 - fixed `secret_tms` (now it can contain a raw number)
+- added `QueryBuilder.schema(name)`
 
 ========================
 0.0.77
